[workspace]
resolver = "2"
members = [
    "crates/iii-core",
    "crates/iii-sni",
    "crates/iii-tor",
    "crates/iii-i2p",
    "crates/iii-vpn",
    "crates/iii-control",
    "crates/iii-daemon",
    "crates/iii-ui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["III Project <security@iii.local>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/i7m7r8/III"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.37", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TLS / SNI tunnel
rustls = { version = "0.23", features = ["ring"] }
rustls-native-certs = "0.7"
webpki-roots = "0.26"
tokio-rustls = "0.25"

# Tor (arti – official Rust implementation)
arti-client = { version = "1.2", default-features = false, features = ["tokio", "static"] }
arti-hyper = "1.2"
tor-rtcompat = "1.2"

# I2P FFI (i2pd static)
libc = "0.2"
cxx = "1.0"
cxx-build = "1.0"

# VPN & TUN
tun = "0.5"
wintun = "0.3"
android_vpn_service = "0.2"
nix = { version = "0.28", features = ["net"] }

# Firewall / kill switch
netlink-packet-route = "0.19"
netlink-proto = "0.11"
winapi = { version = "0.3", features = ["fwpmk", "iphlpapi", "netioapi"] }

# gRPC control plane
tonic = { version = "0.11", features = ["transport", "tls", "tls-roots"] }
prost = "0.12"
tokio-stream = "0.1"

# UI (egui)
egui = "0.27"
eframe = { version = "0.27", features = ["persistence"] }
egui_dock = "0.10"

# Serialization / config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"

# Crypto
ring = "0.17"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"

# Other
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
