[workspace]
resolver = "2"
members = [
    "crates/iii-core",
    "crates/iii-sni",
    "crates/iii-tor",
    "crates/iii-i2p",
    "crates/iii-vpn",
    "crates/iii-control",
    "crates/iii-daemon",
    "crates/iii-ui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["III Project <security@iii.local>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/i7m7r8/III"

[workspace.dependencies]
tokio = { version = "1.37", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
anyhow = "1.0"
thiserror = "1.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pki-types = "1.0"
rustls-native-certs = "0.7"
webpki-roots = "0.26"
tokio-rustls = "0.25"
libc = "0.2"
nix = { version = "0.28", features = ["net", "fs"] }
tokio-stream = "0.1"
tonic = { version = "0.11", features = ["transport", "tls", "tls-roots"] }
prost = "0.12"
egui = "0.27"
eframe = { version = "0.27", features = ["persistence"] }
egui_dock = "0.10"
tun = "0.5"
wintun = "0.3"
android_vpn_service = "0.2"
winapi = { version = "0.3", features = ["fwpmk", "iphlpapi", "netioapi", "windows"] }
netlink-packet-route = "0.19"
netlink-proto = "0.11"
socks5-proto = "0.3"
tokio-io-timeout = "1.2"
smoltcp = { version = "0.11", default-features = false, features = ["std", "log", "proto-ipv4", "socket-tcp"] }
libtor-sys = { git = "https://github.com/teor2345/libtor-sys", branch = "main" }  # or use a stable fork
