[package]
name = "iii-daemon"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "iii-daemon"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
iii-core.workspace = true
iii-vpn.workspace = true
iii-tor.workspace = true
iii-i2p.workspace = true
iii-sni.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
tonic.workspace = true
prost.workspace = true
