[package]
name = "iii-sni"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
tokio-rustls.workspace = true
webpki-roots.workspace = true
iii-core.workspace = true
tracing.workspace = true
anyhow.workspace = true
futures-util.workspace = true
socks5-proto.workspace = true
tokio-io-timeout.workspace = true
