[package]
name = "iii-vpn"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
tun.workspace = true
wintun.workspace = true
android_vpn_service.workspace = true
nix.workspace = true
netlink-packet-route.workspace = true
winapi.workspace = true
iii-core.workspace = true
tracing.workspace = true
