[package]
name = "iii-vpn"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
tun.workspace = true
wintun.workspace = true
nix.workspace = true
netlink-packet-route.workspace = true
iii-core.workspace = true
tracing.workspace = true
smoltcp.workspace = true
anyhow.workspace = true
