[package]
name = "iii-vpn"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
tun.workspace = true
iii-core.workspace = true
tracing.workspace = true
smoltcp.workspace = true
anyhow.workspace = true

[target.'cfg(windows)'.dependencies]
wintun.workspace = true
windows.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true
netlink-packet-route.workspace = true
